samples/_failures_safe/1761522425_78ae53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85bc51f3.c: In function ‘main’:
./samples/SAFE/__tmp_85bc51f3.c:154:28: error: missing terminating " character
  154 |                     printf("Error: Matrices
      |                            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_85bc51f3.c:154:21: error: expected expression at end of input
  154 |                     printf("Error: Matrices
      |                     ^~~~~~
./samples/SAFE/__tmp_85bc51f3.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85bc51f3.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85bc51f3.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85bc51f3.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85bc51f3.c:154:21: error: expected declaration or statement at end of input
